Update: Advantage Icon fix on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,6 +621,11 @@ footer .footer--copyrights a {
 			padding-top: 90px;
 		}
 
+		.fixed-call-btn {
+			bottom: 12px;
+			right: 12px; 
+		}
+
 		.banner--container {
 			aspect-ratio: 4/3;
 		}
